@@ -1,3 +1,12 @@
+2008-02-09  Vincent Untz  <vuntz@gnome.org>
+
+	Port menu.c to gio.
+	Based on patch by Diego Escalante Urrelo <diegoe@gnome.org>
+	Fix part of bug #509756.
+
+	* menu.c: (add_app_to_desktop): straight port
+	(drag_data_get_menu_cb): ditto
+
 2008-02-09  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* panel-toplevel.c: (panel_toplevel_expose):
